# ChangeLog for app-text/sphinxcontrib-issuetracker
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Aug 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.7.2.ebuild:
  Keyworded x86.

  30 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.7.2.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.7.2.ebuild:
  Keyworded ~x86.

*sphinxcontrib-issuetracker-0.7.2 (30 Jun 2011)

  30 Jun 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-issuetracker-0.7.2.ebuild, +metadata.xml, +watch:
  Initial ebuild, by me [388].
