@@ -2,14 +2,16 @@
 Hash: SHA512
 
 DIST sphinxcontrib-issuetracker-0.7.2.tar.gz 15198 RMD160 4e8cc5ed0548ae6ea87c8a57f55b30479649fc94 SHA1 07f27fe90a5a918c0e3661c1b13954eec1bad75b SHA256 fda6ef97fd78aaf35fe3da7f186a309bdad2a49787fb510d1653951aaa934ddd
+DIST sphinxcontrib-issuetracker-0.8.tar.gz 20469 RMD160 4cc92befebad33ebbcd162b68b1f714223fdb596 SHA1 d4f4dc56ce75102f1cfbc5f6e7c0894d3481e60b SHA256 d45b65d32147635d86837b2187c2b5b9532cbcff773a16c61c6424cbe7c9df06
 EBUILD sphinxcontrib-issuetracker-0.7.2.ebuild 770 RMD160 f2909793cfe6a5a87402a8d9abf19a0f668dca8a SHA1 e58202c3269eb854b92500e18731241a9730ab11 SHA256 8745f18a5c198630d29397331969407183c49b2468c334b12732639d614d0a10
-MISC ChangeLog 650 RMD160 23f6ab76920a69a9b0d3906c556d2fd4f29d08b1 SHA1 f690b88d41140c85af71a2812051185dcaffcb25 SHA256 78df42f8c0a288c4b15478d766ea8c9ca9ea144a4a5b9fec223ead5575eb87f0
+EBUILD sphinxcontrib-issuetracker-0.8.ebuild 772 RMD160 40eb0715675779a03716f43ebc99a064013558b2 SHA1 68da71afad0ade82cb2cdb1427e612e2eef03f21 SHA256 ad4efb42c09f2e0a6207479a4b08ea63413a716b33bd9f0ae618d1f6aac4faef
+MISC ChangeLog 807 RMD160 c6b8a1fabc128d4253b33caaabf6addd586365a4 SHA1 6cb9002ea92267be3d728ec5b6266337d8454f4f SHA256 f8d9f2fdc0fb6b34e25ed192670b0da3a567c99dc4fb5094ae062dde72c1ad9b
 MISC metadata.xml 715 RMD160 8e6f1218d27cb9ce66795cc5be1a459a70b5a1d2 SHA1 f62839b788a86f0eba9532fb9e5e7f3ec8705377 SHA256 2d71f54003c75e112f4d16ed6bdf387472d30dbf3ab98d0aab7fd9938969cc96
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk42adIACgkQzJrj3cAXR0nq7gCdGlIsSdNlMcL47aFMShE8a0M4
-UhIAn17adMLH0lWprYp10dk+5wrGum/Q
-=7PaB
+iEYEAREKAAYFAk5YeygACgkQzJrj3cAXR0n28ACfWODn+6PgSGz5nh69Ssq0t5Yb
+ZX4AnAx3uvgIOCSDsthn/GyVtjA03zvl
+=GOH0
 -----END PGP SIGNATURE-----
