@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+dev-python/setuptools >=dev-python/sphinx-1.0 >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+0
+mirror://pypi/s/sphinxcontrib-issuetracker/sphinxcontrib-issuetracker-0.8.tar.gz
+
+http://packages.python.org/sphinxcontrib-issuetracker/
+BSD-2
+dev-python/sphinx extension to create links to issue trackers
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
