@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sphinxcontrib-issuetracker-0.8 (27 Aug 2011)
+
+  27 Aug 2011; James Rowe <jnrowe@gmail.com>
+  +sphinxcontrib-issuetracker-0.8.ebuild:
+  Version bump [461].
+
   01 Aug 2011; James Rowe <jnrowe@gmail.com>
   sphinxcontrib-issuetracker-0.7.2.ebuild:
   Keyworded x86.
